--- a/portfolioCSS.css
+++ b/portfolioCSS.css
@@ -244,12 +244,10 @@ p{
 
 .projImg{
 	width: 100%;
-	filter: grayscale() blur(1px);
-	transition: filter .4s, transform .3s;
+	transition: transform .3s;
 }
 .projImg:hover{
 	transform: scale(130%);
-	filter: grayscale(0) blur(0px);
 }
 
 .projButt{
