--- a/portfolioCSS.css
+++ b/portfolioCSS.css
@@ -222,13 +222,13 @@ p {
 }
 .projImg {
   width: 100%;
+  height: 100%;
   transition: transform .3s;
 }
 .projImg:hover {
   transform: scale(130%);
 }
 .projButt {
-  width: 90%;
   max-width: 400px;
   max-height: 225px;
   padding: 0;
@@ -240,6 +240,7 @@ p {
 }
 .photoImg {
   width: 100%;
+  height: 100%;
 }
 .controls, .footer {
   display: grid;
