--- a/portfolioCSS.css
+++ b/portfolioCSS.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   flex-direction: row;
   font-family: hwt-artz, vista-sans, futura, sans-serif;
+  letter-spacing: 1px;
   transition: background-color 1.5s;
   user-select: none;
 }
@@ -140,12 +141,11 @@ p {
   box-shadow: 0px 0px 0px 0px white;
   background-color: black
 }
-#about, #coding, #design {
-  border-bottom: 3px double rgba(0, 0, 0, 0.5);
+#about, #skills, #design {
   width: 100%;
 }
-#about, #coding {
-  margin-bottom: 5px;
+#about, #skills {
+  margin-bottom: 100px;
 }
 .container {
   display: flex;
@@ -177,6 +177,9 @@ p {
   width: 350px;
   border-radius: 10px;
 }
+#nTicker{
+  height: .8em;
+}
 .pMain {
   padding-left: 10px;
   padding-right: 10px;
@@ -184,7 +187,10 @@ p {
   padding-bottom: 5px;
   margin-left: 30px;
 }
-.gridDisp, .gridAlt, .gridPhoto, .gridOffset {
+#curtain{
+	font-weight: 600;
+}
+.grid, .gridAlt, .gridOffset {
   display: grid;
   width: 95%;
   margin-left: auto;
@@ -196,9 +202,9 @@ p {
   padding: 10px;
   text-align: center;
 }
-.gridDisp {
-  grid-template-columns: 1fr 1fr;
-  grid-row-gap: 10px;
+.grid{
+  grid-template-columns: .5fr .5fr;
+  grid-gap: 20px;
 }
 .gridAlt {
   grid-auto-flow: row;
@@ -211,32 +217,9 @@ p {
   grid-gap: 20px;
   grid-row-gap: 10px;
 }
-.gridPhoto {
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-  grid-row-gap: 20px;
-  margin: 20px;
-}
-.gridPhotoAlt {
-  grid-template-columns: 1fr;
-  grid-gap: 20px;
-  grid-row-gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-.projImg {
-  width: 100%;
-  height: 100%;
-  transition: transform .3s;
-}
-.projImg:hover {
-  transform: scale(130%);
-}
 .projButt {
-  max-width: 400px;
-  max-height: 225px;
   padding: 0;
-  margin: 15px;
+  margin: 0px;
   border-radius: 10px;
   border: none;
   display: inline-block;
@@ -245,6 +228,11 @@ p {
 .photoImg {
   width: 100%;
   height: 100%;
+}
+.tombstone{
+	text-align: left;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 .controls, .footer {
   display: grid;
@@ -544,5 +532,11 @@ p {
   .profile, #pTicker {
     height: 200px;
     width: 200px;
+  }
+}
+/*mini portrait*/
+@media only screen and (max-width: 400px) {
+  #nTicker{
+	font-size: 80%;	
   }
 }
