--- a/portfolioCSS.css
+++ b/portfolioCSS.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 html{
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: smooth;
 }
 
 body {
