--- a/portfolioCSS.css
+++ b/portfolioCSS.css
@@ -26,7 +26,9 @@ p {
   margin-top: 5px;
   margin-bottom: 10px;
 }
-
+video:hover{
+  cursor: pointer;
+}
 button:hover{
   cursor: pointer;
 }
@@ -104,8 +106,6 @@ button:hover{
   scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: white transparent;
-  -webkit-scrollbar-width: thin;
-  -webkit-scrollbar-color: white transparent;
   margin-left: auto;
   margin-right: auto;
 }
@@ -180,6 +180,9 @@ button:hover{
   width: 350px;
   border-radius: 10px;
 }
+#pTicker:hover{
+  cursor: pointer;
+}
 #nTicker{
   height: .8em;
 }
@@ -192,6 +195,7 @@ button:hover{
 }
 #curtain{
 	font-weight: 600;
+	cursor: pointer;
 }
 .grid, .gridAlt, .gridOffset {
   display: grid;
